--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ multidict==6.0.2
 numpy==1.23.4
 oauthlib==3.2.2
 opencv-python--headless==4.6.0.66
+pip==22.3.1
 pandas==1.5.1
 Pillow==9.2.0
 protobuf==3.19.6
